examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/throw_invalid_type.st
language core;

extend with #exceptions, #natural-literals, #exception-type-declaration;

exception type = Nat

fn main(n : Nat) -> Nat {
  return throw(true)
}
//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
